--- a/_config/config.yml
+++ b/_config/config.yml
@@ -1,6 +1,6 @@
-SilverStripe\Assets\File:
+SilverStripe\SiteConfig\SiteConfig:
   extensions:
     - textagroup\brafton_api\Extensions\BraftonSiteConfigExtension
-SilverStripe\AssetAdmin\Forms\FileFormFactory:
-  extensions:
-    - textagroup\brafton_api\Extensions\BraftonFactoryExtension
+# SilverStripe\SiteConfig\SiteConfig:
+#   extensions:
+#     - textagroup\brafton_api\Extensions\BraftonFactoryExtension
